--- a/UI/ColorVision.Solution/Properties/Resources.fr.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.fr.resx
@@ -228,4 +228,13 @@
   <data name="Delete" xml:space="preserve">
     <value>Supprimer</value>
   </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>ouvrir</value>
+  </data>
+  <data name="MenuProperty" xml:space="preserve">
+    <value>attribut(_R)</value>
+  </data>
+  <data name="MenuAdd" xml:space="preserve">
+    <value>ajouter</value>
+  </data>
 </root>
