--- a/UI/ColorVision.Solution/Properties/Resources.ko.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ko.resx
@@ -228,4 +228,13 @@
   <data name="Delete" xml:space="preserve">
     <value>삭제</value>
   </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>열기(_O)</value>
+  </data>
+  <data name="MenuProperty" xml:space="preserve">
+    <value>속성(_R)</value>
+  </data>
+  <data name="MenuAdd" xml:space="preserve">
+    <value>추가(_D)</value>
+  </data>
 </root>
