--- a/UI/ColorVision.Solution/Properties/Resources.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.resx
@@ -208,4 +208,13 @@
   <data name="Delete" xml:space="preserve">
     <value>删除</value>
   </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>打开(_O)</value>
+  </data>
+  <data name="MenuProperty" xml:space="preserve">
+    <value>属性(_R)</value>
+  </data>
+  <data name="MenuAdd" xml:space="preserve">
+    <value>添加(_D)</value>
+  </data>
 </root>
