--- a/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.zh-Hant.resx
@@ -228,4 +228,13 @@
   <data name="Delete" xml:space="preserve">
     <value>刪除</value>
   </data>
+  <data name="MenuOpen" xml:space="preserve">
+    <value>打開(_O)</value>
+  </data>
+  <data name="MenuProperty" xml:space="preserve">
+    <value>屬性(_R)</value>
+  </data>
+  <data name="MenuAdd" xml:space="preserve">
+    <value>添加(_D)</value>
+  </data>
 </root>
