--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -837,4 +837,7 @@
   <data name="ViewImageReadDelay" xml:space="preserve">
     <value>DélaiLectureImageVue</value>
   </data>
+  <data name="Threshold" xml:space="preserve">
+    <value>Seuil</value>
+  </data>
 </root>
