--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -837,4 +837,7 @@
   <data name="ViewImageReadDelay" xml:space="preserve">
     <value>画像表示遅延</value>
   </data>
+  <data name="Threshold" xml:space="preserve">
+    <value>しきい値</value>
+  </data>
 </root>
