--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -837,4 +837,7 @@
   <data name="ViewImageReadDelay" xml:space="preserve">
     <value>이미지읽기지연</value>
   </data>
+  <data name="Threshold" xml:space="preserve">
+    <value>임계값</value>
+  </data>
 </root>
