--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -380,7 +380,7 @@
     <value>管理员服务配置(_S)</value>
   </data>
   <data name="MenuSensor" xml:space="preserve">
-    <value>通用传感器模板设置(_S)</value>
+    <value>传感器模板(_S)</value>
   </data>
   <data name="MenuRename" xml:space="preserve">
     <value>重命名(_M)</value>
