--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -840,4 +840,7 @@
   <data name="Threshold" xml:space="preserve">
     <value>порог</value>
   </data>
+  <data name="Copy" xml:space="preserve">
+    <value>копировать</value>
+  </data>
 </root>
