--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -840,4 +840,7 @@
   <data name="Threshold" xml:space="preserve">
     <value>閾值</value>
   </data>
+  <data name="Copy" xml:space="preserve">
+    <value>複製</value>
+  </data>
 </root>
