--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -843,4 +843,7 @@
   <data name="Copy" xml:space="preserve">
     <value>копировать</value>
   </data>
+  <data name="Lock" xml:space="preserve">
+    <value>блокировка</value>
+  </data>
 </root>
