--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -843,4 +843,7 @@
   <data name="Copy" xml:space="preserve">
     <value>복사</value>
   </data>
+  <data name="Lock" xml:space="preserve">
+    <value>잠금</value>
+  </data>
 </root>
