--- a/ColorVision/Properties/Resources.en.resx
+++ b/ColorVision/Properties/Resources.en.resx
@@ -321,4 +321,7 @@
   <data name="Command" xml:space="preserve">
     <value>Command</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
