--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -321,4 +321,7 @@
   <data name="Command" xml:space="preserve">
     <value>コマンド</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>検索</value>
+  </data>
 </root>
