--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -321,4 +321,7 @@
   <data name="Command" xml:space="preserve">
     <value>명령</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>찾다</value>
+  </data>
 </root>
