--- a/ColorVision/Properties/Resources.ru.resx
+++ b/ColorVision/Properties/Resources.ru.resx
@@ -321,4 +321,7 @@
   <data name="Command" xml:space="preserve">
     <value>Команда</value>
   </data>
+  <data name="Search" xml:space="preserve">
+    <value>поиск</value>
+  </data>
 </root>
