--- a/ColorVision/Properties/Resources.ja.resx
+++ b/ColorVision/Properties/Resources.ja.resx
@@ -324,4 +324,10 @@
   <data name="Search" xml:space="preserve">
     <value>検索</value>
   </data>
+  <data name="Debugging" xml:space="preserve">
+    <value>デバッグ</value>
+  </data>
+  <data name="Bit" xml:space="preserve">
+    <value>少し</value>
+  </data>
 </root>
