--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -324,4 +324,10 @@
   <data name="Search" xml:space="preserve">
     <value>찾다</value>
   </data>
+  <data name="Debugging" xml:space="preserve">
+    <value>디버깅</value>
+  </data>
+  <data name="Bit" xml:space="preserve">
+    <value>조금</value>
+  </data>
 </root>
