--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -324,4 +324,10 @@
   <data name="Search" xml:space="preserve">
     <value>搜索</value>
   </data>
+  <data name="Debugging" xml:space="preserve">
+    <value>调试中</value>
+  </data>
+  <data name="Bit" xml:space="preserve">
+    <value>位</value>
+  </data>
 </root>
