--- a/ColorVision/Properties/Resources.ru.resx
+++ b/ColorVision/Properties/Resources.ru.resx
@@ -324,4 +324,10 @@
   <data name="Search" xml:space="preserve">
     <value>поиск</value>
   </data>
+  <data name="Debugging" xml:space="preserve">
+    <value>Отладка</value>
+  </data>
+  <data name="Bit" xml:space="preserve">
+    <value>Кусочек</value>
+  </data>
 </root>
