更新变更日志和搜索功能
- 更新CHANGELOG.md，添加版本1.1.16.1的变更日志。
- 在MainWindow.xaml中添加搜索Popup控件和ListView。
- 在Resources.Designer.cs中添加ReleaseDate本地化字符串。
- 在多个语言资源文件中添加ReleaseDate的本地化支持。
- 更新ChangeLogEntry.cs，移除旧的using语句并添加DisplayName特性。
- 在ChangelogWindow.xaml中添加搜索框和相关UI元素。
- 在ChangelogWindow.xaml.cs中实现搜索功能，支持按版本、发布日期或变更内容过滤。
- 在MenuChangeLog.cs中调用新ChangelogWindow以打开变更日志。
- 更新MenuUpdateReInstall.cs和MenuUpdateReInstallPath.cs中的菜单项顺序和可见性。
- 移除MenuCheckAndUpdateV1.cs中的旧增量更新菜单项，添加新的检查更新菜单项。

--- a/ColorVision/Properties/Resources.en.resx
+++ b/ColorVision/Properties/Resources.en.resx
@@ -330,4 +330,7 @@
   <data name="Bit" xml:space="preserve">
     <value>Bit</value>
   </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>Release Date</value>
+  </data>
 </root>
