--- a/ColorVision/Properties/Resources.fr.resx
+++ b/ColorVision/Properties/Resources.fr.resx
@@ -330,4 +330,7 @@
   <data name="Bit" xml:space="preserve">
     <value>Peu</value>
   </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>date de publication</value>
+  </data>
 </root>
