--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -330,4 +330,7 @@
   <data name="Bit" xml:space="preserve">
     <value>位</value>
   </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>发布日期</value>
+  </data>
 </root>
