--- a/ColorVision/Properties/Resources.ru.resx
+++ b/ColorVision/Properties/Resources.ru.resx
@@ -330,4 +330,7 @@
   <data name="Bit" xml:space="preserve">
     <value>Кусочек</value>
   </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>дата выпуска</value>
+  </data>
 </root>
