--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -846,4 +846,7 @@
   <data name="Lock" xml:space="preserve">
     <value>блокировка</value>
   </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>ПодтвердитьУдалить</value>
+  </data>
 </root>
