--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -846,4 +846,7 @@
   <data name="Lock" xml:space="preserve">
     <value>verrouiller</value>
   </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>ConfirmerSupprimer</value>
+  </data>
 </root>
