--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -826,4 +826,7 @@
   <data name="Lock" xml:space="preserve">
     <value>锁定</value>
   </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>是否删除</value>
+  </data>
 </root>
