--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -846,4 +846,7 @@
   <data name="Lock" xml:space="preserve">
     <value>鎖定</value>
   </data>
+  <data name="ConfirmDelete" xml:space="preserve">
+    <value>確認刪除</value>
+  </data>
 </root>
