--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -849,4 +849,16 @@
   <data name="ConfirmDelete" xml:space="preserve">
     <value>ConfirmDelete</value>
   </data>
+  <data name="CalibrationCorrection" xml:space="preserve">
+    <value>Correction tools</value>
+  </data>
+  <data name="SelectCalibToolsExe" xml:space="preserve">
+    <value>Select CalibTools.exe</value>
+  </data>
+  <data name="CannotFindCalibToolsExe_HelpMeFindIt" xml:space="preserve">
+    <value>I can't find CalibTools (CalibTools.exe). Would you like to help me find it?</value>
+  </data>
+  <data name="OpenInCalibTools" xml:space="preserve">
+    <value>Open in CalibTools</value>
+  </data>
 </root>
