--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -829,4 +829,16 @@
   <data name="ConfirmDelete" xml:space="preserve">
     <value>是否删除</value>
   </data>
+  <data name="CalibrationCorrection" xml:space="preserve">
+    <value>校正生成工具</value>
+  </data>
+  <data name="SelectCalibToolsExe" xml:space="preserve">
+    <value>选择 CalibTools.exe</value>
+  </data>
+  <data name="CannotFindCalibToolsExe_HelpMeFindIt" xml:space="preserve">
+    <value>我找不到 CalibTools (CalibTools.exe)。你愿意帮我找到它吗？</value>
+  </data>
+  <data name="OpenInCalibTools" xml:space="preserve">
+    <value>在 CalibTools 中打开</value>
+  </data>
 </root>
