--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -849,4 +849,16 @@
   <data name="ConfirmDelete" xml:space="preserve">
     <value>確認刪除</value>
   </data>
+  <data name="CalibrationCorrection" xml:space="preserve">
+    <value>校正生成工具</value>
+  </data>
+  <data name="SelectCalibToolsExe" xml:space="preserve">
+    <value>選擇CalibTools.exe</value>
+  </data>
+  <data name="CannotFindCalibToolsExe_HelpMeFindIt" xml:space="preserve">
+    <value>我找不到 CalibTools (CalibTools.exe)。你願意幫我找到它嗎？</value>
+  </data>
+  <data name="OpenInCalibTools" xml:space="preserve">
+    <value>在 CalibTools 中打開</value>
+  </data>
 </root>
