--- a/ColorVision/Properties/Resources.ko.resx
+++ b/ColorVision/Properties/Resources.ko.resx
@@ -333,4 +333,7 @@
   <data name="ReleaseDate" xml:space="preserve">
     <value>출시일</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>삭제</value>
+  </data>
 </root>
