--- a/ColorVision/Properties/Resources.resx
+++ b/ColorVision/Properties/Resources.resx
@@ -333,4 +333,7 @@
   <data name="ReleaseDate" xml:space="preserve">
     <value>发布日期</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>删除</value>
+  </data>
 </root>
