--- a/ColorVision/Properties/Resources.ru.resx
+++ b/ColorVision/Properties/Resources.ru.resx
@@ -333,4 +333,7 @@
   <data name="ReleaseDate" xml:space="preserve">
     <value>дата выпуска</value>
   </data>
+  <data name="Delete" xml:space="preserve">
+    <value>удалить</value>
+  </data>
 </root>
