--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -262,4 +262,7 @@
   <data name="MenuRedo" xml:space="preserve">
     <value>重做(_R)</value>
   </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>缓冲区大小</value>
+  </data>
 </root>
