--- a/UI/ColorVision.UI/Properties/Resources.fr.resx
+++ b/UI/ColorVision.UI/Properties/Resources.fr.resx
@@ -282,4 +282,7 @@
   <data name="MenuRedo" xml:space="preserve">
     <value>Refaire</value>
   </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>taille du tampon</value>
+  </data>
 </root>
