--- a/UI/ColorVision.UI/Properties/Resources.ko.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ko.resx
@@ -282,4 +282,7 @@
   <data name="MenuRedo" xml:space="preserve">
     <value>다시 하기</value>
   </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>버퍼 크기</value>
+  </data>
 </root>
