--- a/UI/ColorVision.UI/Properties/Resources.ru.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ru.resx
@@ -282,4 +282,7 @@
   <data name="MenuRedo" xml:space="preserve">
     <value>Повторить</value>
   </data>
+  <data name="SocketBufferSize" xml:space="preserve">
+    <value>размер буфера</value>
+  </data>
 </root>
