--- a/ColorVision/Properties/Resources.en.resx
+++ b/ColorVision/Properties/Resources.en.resx
@@ -181,7 +181,7 @@
     <value>Wizard</value>
   </data>
   <data name="GeneralSettings" xml:space="preserve">
-    <value>General settings</value>
+    <value>General</value>
   </data>
   <data name="CheckForUpdates" xml:space="preserve">
     <value>Check for updates</value>
