--- a/UI/ColorVision.UI/Properties/Resources.en.resx
+++ b/UI/ColorVision.UI/Properties/Resources.en.resx
@@ -285,4 +285,10 @@
   <data name="SocketBufferSize" xml:space="preserve">
     <value>SocketBufferSize</value>
   </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>Universal</value>
+  </data>
 </root>
