--- a/UI/ColorVision.UI/Properties/Resources.fr.resx
+++ b/UI/ColorVision.UI/Properties/Resources.fr.resx
@@ -285,4 +285,10 @@
   <data name="SocketBufferSize" xml:space="preserve">
     <value>taille du tampon</value>
   </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>Réglages généraux</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>Universel</value>
+  </data>
 </root>
