--- a/UI/ColorVision.UI/Properties/Resources.ru.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ru.resx
@@ -285,4 +285,10 @@
   <data name="SocketBufferSize" xml:space="preserve">
     <value>размер буфера</value>
   </data>
+  <data name="GeneralSettings" xml:space="preserve">
+    <value>Общие настройки</value>
+  </data>
+  <data name="General" xml:space="preserve">
+    <value>Универсальный</value>
+  </data>
 </root>
