--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -782,7 +782,7 @@
     <value>产品宣传手册</value>
   </data>
   <data name="UnknownStatus" xml:space="preserve">
-    <value>未知状态</value>
+    <value>未知状态，请重启服务</value>
   </data>
   <data name="DefaultValue" xml:space="preserve">
     <value>默认值</value>
