更新版本至1.3.3.1，重构项目管理功能
- 更新CHANGELOG.md，添加版本1.3.3.1信息。
- 在MenuProjectManager.cs中实现MenuProjectManager类，增强项目管理窗口功能。
- 在ProjectInfo.cs中重构项目信息管理，支持删除和创建快捷方式。
- 在ProjectManager.cs中重构项目管理逻辑，增加下载和安装功能。
- 更新ProjectManagerWindow.xaml，增强用户界面交互性。
- 在ProjectManagerWindow.xaml.cs中重构窗口初始化逻辑。
- 在Resources.resx及语言资源文件中添加新的本地化字符串。
- 更新Directory.Build.props中的版本前缀至1.3.3.1。

--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -861,4 +861,22 @@
   <data name="OpenInCalibTools" xml:space="preserve">
     <value>Ouvrir dans CalibTools</value>
   </data>
+  <data name="ProjectManagerWindow" xml:space="preserve">
+    <value>FenêtreGestionProjet</value>
+  </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>date de publication</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>DateDeConstruction</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>Commande</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>NomDuProjet</value>
+  </data>
 </root>
