--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -861,4 +861,22 @@
   <data name="OpenInCalibTools" xml:space="preserve">
     <value>CalibToolsで開く</value>
   </data>
+  <data name="ProjectManagerWindow" xml:space="preserve">
+    <value>プロジェクトマネージャーウィンドウ</value>
+  </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>発売日</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>ビルド日</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>バージョン</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>コマンド</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>プロジェクト名</value>
+  </data>
 </root>
