--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -861,4 +861,22 @@
   <data name="OpenInCalibTools" xml:space="preserve">
     <value>Открыть в CalibTools</value>
   </data>
+  <data name="ProjectManagerWindow" xml:space="preserve">
+    <value>ОкноМенеджераПроекта</value>
+  </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>дата выпуска</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>ДатаСборки</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Версия</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>Команда</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>НазваниеПроекта</value>
+  </data>
 </root>
