--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -861,4 +861,22 @@
   <data name="OpenInCalibTools" xml:space="preserve">
     <value>在 CalibTools 中打開</value>
   </data>
+  <data name="ProjectManagerWindow" xml:space="preserve">
+    <value>專案管理視窗</value>
+  </data>
+  <data name="ReleaseDate" xml:space="preserve">
+    <value>發佈日期</value>
+  </data>
+  <data name="BuildDate" xml:space="preserve">
+    <value>建置日期</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>版本</value>
+  </data>
+  <data name="Command" xml:space="preserve">
+    <value>命令</value>
+  </data>
+  <data name="ProjectName" xml:space="preserve">
+    <value>專案名稱</value>
+  </data>
 </root>
