添加本地化支持和界面改进
在 `Resources.Designer.cs` 和 `Resources.resx` 文件中，新增了对本地化字符串 "Column" 和 "Line" 的支持，分别对应中文的 "行" 和 "Column"。

在 `AvalonEditControll.xaml` 和 `AvalonEditWindow.xaml` 文件中，进行了样式和布局的修改，主要是将按钮的背景和边框设置为透明，并添加了状态栏以显示当前光标位置。

在 `AvalonEditControll.xaml.cs` 和 `AvalonEditWindow.xaml.cs` 文件中，添加了 `Caret_PositionChanged` 方法以更新状态栏，并修改了构造函数以包含光标位置变化的事件处理程序。

--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -271,4 +271,10 @@
   <data name="General" xml:space="preserve">
     <value>通用</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>行</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>Column</value>
+  </data>
 </root>
