--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -859,4 +859,7 @@
   <data name="ProjectName" xml:space="preserve">
     <value>项目名称</value>
   </data>
+  <data name="Workflow" xml:space="preserve">
+    <value>工作流程</value>
+  </data>
 </root>
