--- a/UI/ColorVision.UI/Properties/Resources.resx
+++ b/UI/ColorVision.UI/Properties/Resources.resx
@@ -275,6 +275,6 @@
     <value>行</value>
   </data>
   <data name="Column" xml:space="preserve">
-    <value>Column</value>
+    <value>列</value>
   </data>
 </root>
