--- a/UI/ColorVision.Solution/Properties/Resources.en.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.en.resx
@@ -237,4 +237,28 @@
   <data name="MenuAdd" xml:space="preserve">
     <value>_Add</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
+  </data>
+  <data name="FillPassword" xml:space="preserve">
+    <value>Please enter your password</value>
+  </data>
+  <data name="FillAccount" xml:space="preserve">
+    <value>Please enter your account</value>
+  </data>
+  <data name="AccountLogin" xml:space="preserve">
+    <value>Sign in to ColorVision</value>
+  </data>
+  <data name="Account" xml:space="preserve">
+    <value>Account</value>
+  </data>
+  <data name="Sign_out" xml:space="preserve">
+    <value>Sign out</value>
+  </data>
+  <data name="Sign_in" xml:space="preserve">
+    <value>Sign in</value>
+  </data>
+  <data name="Create_an_account" xml:space="preserve">
+    <value>Create an account</value>
+  </data>
 </root>
