--- a/UI/ColorVision.Solution/Properties/Resources.ko.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ko.resx
@@ -237,4 +237,28 @@
   <data name="MenuAdd" xml:space="preserve">
     <value>추가(_D)</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>비밀번호</value>
+  </data>
+  <data name="FillPassword" xml:space="preserve">
+    <value>비밀번호를 입력해주세요</value>
+  </data>
+  <data name="FillAccount" xml:space="preserve">
+    <value>계정을 입력해주세요</value>
+  </data>
+  <data name="AccountLogin" xml:space="preserve">
+    <value>계정 로그인</value>
+  </data>
+  <data name="Account" xml:space="preserve">
+    <value>계정</value>
+  </data>
+  <data name="Sign_out" xml:space="preserve">
+    <value>로그아웃</value>
+  </data>
+  <data name="Sign_in" xml:space="preserve">
+    <value>로그인</value>
+  </data>
+  <data name="Create_an_account" xml:space="preserve">
+    <value>계정을 만들기</value>
+  </data>
 </root>
