--- a/UI/ColorVision.Solution/Properties/Resources.ru.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ru.resx
@@ -237,4 +237,28 @@
   <data name="MenuAdd" xml:space="preserve">
     <value>добавить</value>
   </data>
+  <data name="Password" xml:space="preserve">
+    <value>Пароль</value>
+  </data>
+  <data name="FillPassword" xml:space="preserve">
+    <value>Пожалуйста введите пароль</value>
+  </data>
+  <data name="FillAccount" xml:space="preserve">
+    <value>Пожалуйста, введите имя пользователя</value>
+  </data>
+  <data name="AccountLogin" xml:space="preserve">
+    <value>Логин аккаунта</value>
+  </data>
+  <data name="Account" xml:space="preserve">
+    <value>счет</value>
+  </data>
+  <data name="Sign_out" xml:space="preserve">
+    <value>покидать</value>
+  </data>
+  <data name="Sign_in" xml:space="preserve">
+    <value>Авторизоваться</value>
+  </data>
+  <data name="Create_an_account" xml:space="preserve">
+    <value>Зарегистрируйте</value>
+  </data>
 </root>
