--- a/UI/ColorVision.UI/Properties/Resources.ja.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ja.resx
@@ -291,4 +291,22 @@
   <data name="General" xml:space="preserve">
     <value>ユニバーサル</value>
   </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>プラグインマネージャーウィンドウ</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>プラグイン名</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>検索</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>更新する</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>消去</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>バージョン</value>
+  </data>
 </root>
