--- a/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
@@ -291,4 +291,22 @@
   <data name="General" xml:space="preserve">
     <value>一般</value>
   </data>
+  <data name="PluginManagerWindow" xml:space="preserve">
+    <value>插件管理器視窗</value>
+  </data>
+  <data name="PluginName" xml:space="preserve">
+    <value>插件名稱</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>搜尋</value>
+  </data>
+  <data name="Update" xml:space="preserve">
+    <value>更新</value>
+  </data>
+  <data name="Delete" xml:space="preserve">
+    <value>刪除</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>版本</value>
+  </data>
 </root>
