--- a/UI/ColorVision.UI/Properties/Resources.fr.resx
+++ b/UI/ColorVision.UI/Properties/Resources.fr.resx
@@ -309,4 +309,13 @@
   <data name="Version" xml:space="preserve">
     <value>Version</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>D'ACCORD</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>Liste</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>Options</value>
+  </data>
 </root>
