--- a/UI/ColorVision.UI/Properties/Resources.ja.resx
+++ b/UI/ColorVision.UI/Properties/Resources.ja.resx
@@ -309,4 +309,13 @@
   <data name="Version" xml:space="preserve">
     <value>バージョン</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>わかりました</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>リスト</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>オプション</value>
+  </data>
 </root>
