--- a/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.UI/Properties/Resources.zh-Hant.resx
@@ -309,4 +309,13 @@
   <data name="Version" xml:space="preserve">
     <value>版本</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>列</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>列</value>
+  </data>
+  <data name="Options" xml:space="preserve">
+    <value>選項</value>
+  </data>
 </root>
