--- a/UI/ColorVision.Solution/Properties/Resources.en.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.en.resx
@@ -261,4 +261,10 @@
   <data name="Create_an_account" xml:space="preserve">
     <value>Create an account</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>Line</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>Column</value>
+  </data>
 </root>
