--- a/UI/ColorVision.Solution/Properties/Resources.ru.resx
+++ b/UI/ColorVision.Solution/Properties/Resources.ru.resx
@@ -261,4 +261,10 @@
   <data name="Create_an_account" xml:space="preserve">
     <value>Зарегистрируйте</value>
   </data>
+  <data name="Line" xml:space="preserve">
+    <value>ХОРОШО</value>
+  </data>
+  <data name="Column" xml:space="preserve">
+    <value>Список</value>
+  </data>
 </root>
